Fixed listing bug
